# cookiecutter-pysimple-cli

./: .gitignore  README.rst  cookiecutter.json
{{cookiecutter.repo_name}}/: README.rst  setup.cfg
{{cookiecutter.repo_name}}/tests/: test_{{cookiecutter.package_name}}.py
{{cookiecutter.repo_name}}/{{cookiecutter.package_name}}/: __main__.py
