[metadata]
name = {{cookiecutter.package_name}}
author = nassim.babaci
author-email = nassim.babaci@cloudreach.co.uk
summary = My awsome project with python
description-file = README.rst
classifier =
    Development Status :: 4 - Beta
        Environment :: Console
        Environment :: AWS
        Intended Audience :: Developers
        Intended Audience :: Information Technology
        Operating System :: OS Independent
        Programming Language :: Python

[files]
packages =
    {{cookiecutter.package_name}}
data_files =
    etc/{{cookiecutter.package_name}} = etc/*

[entry_points]
console_scripts =
    {{cookiecutter.package_name}}_cli = {{cookiecutter.package_name}}.__main__:main
